Added comparisons, improved zip extraction

--- a/notebooks/download_raw.ipynb
+++ b/notebooks/download_raw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "adjusted-strap",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "outer-permission",
    "metadata": {},
    "outputs": [],
@@ -29,13 +29,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "ignored-forest",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Downloading... 100%, 776 MB of 776 MB"
      ]
@@ -65,6 +65,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "MPI-ESM-1-2-HAM_daily_rainfall_NSW.csv\n",
+      "AWI-ESM-1-1-LR_daily_rainfall_NSW.csv\n",
+      "NorESM2-LM_daily_rainfall_NSW.csv\n",
+      "ACCESS-CM2_daily_rainfall_NSW.csv\n",
+      "FGOALS-f3-L_daily_rainfall_NSW.csv\n",
+      "CMCC-CM2-HR4_daily_rainfall_NSW.csv\n",
+      "MRI-ESM2-0_daily_rainfall_NSW.csv\n",
+      "GFDL-CM4_daily_rainfall_NSW.csv\n",
+      "BCC-CSM2-MR_daily_rainfall_NSW.csv\n",
+      "EC-Earth3-Veg-LR_daily_rainfall_NSW.csv\n",
+      "CMCC-ESM2_daily_rainfall_NSW.csv\n",
+      "NESM3_daily_rainfall_NSW.csv\n",
+      "MPI-ESM1-2-LR_daily_rainfall_NSW.csv\n",
+      "ACCESS-ESM1-5_daily_rainfall_NSW.csv\n",
+      "FGOALS-g3_daily_rainfall_NSW.csv\n",
+      "INM-CM4-8_daily_rainfall_NSW.csv\n",
+      "MPI-ESM1-2-HR_daily_rainfall_NSW.csv\n",
+      "TaiESM1_daily_rainfall_NSW.csv\n",
+      "NorESM2-MM_daily_rainfall_NSW.csv\n",
+      "CMCC-CM2-SR5_daily_rainfall_NSW.csv\n",
+      "observed_daily_rainfall_SYD.csv\n",
+      "KIOST-ESM_daily_rainfall_NSW.csv\n",
+      "INM-CM5-0_daily_rainfall_NSW.csv\n",
+      "MIROC6_daily_rainfall_NSW.csv\n",
+      "BCC-ESM1_daily_rainfall_NSW.csv\n",
+      "GFDL-ESM4_daily_rainfall_NSW.csv\n",
+      "CanESM5_daily_rainfall_NSW.csv\n",
+      "SAM0-UNICON_daily_rainfall_NSW.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "with zipfile.ZipFile(os.path.join(raw_data_directory_path, \"data.zip\"), \"r\") as zf:\n",
+    "    file_list = zf.namelist()\n",
+    "    # print(file_list)\n",
+    "\n",
+    "    for f in file_list:\n",
+    "        if \"__MACOSX\" not in f:\n",
+    "            print(f)\n",
+    "            df = pd.read_csv(zf.open(f))\n",
+    "            df.to_csv(os.path.join(raw_data_directory_path,f))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "increasing-palestine",
    "metadata": {},
@@ -74,211 +127,17 @@
     "\n",
     "**Code below is for testing only**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "entire-drove",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with zipfile.ZipFile(os.path.join(raw_data_directory_path, \"data.zip\"), \"r\") as zf:\n",
-    "    df = pd.read_csv(zf.open(\"BCC-CSM2-MR_daily_rainfall_NSW.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "decimal-barrel",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>lat_min</th>\n",
-       "      <th>lat_max</th>\n",
-       "      <th>lon_min</th>\n",
-       "      <th>lon_max</th>\n",
-       "      <th>rain (mm/day)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1889-01-01 12:00:00</td>\n",
-       "      <td>-35.887649</td>\n",
-       "      <td>-34.766162</td>\n",
-       "      <td>141.1875</td>\n",
-       "      <td>142.3125</td>\n",
-       "      <td>4.265520e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1889-01-02 12:00:00</td>\n",
-       "      <td>-35.887649</td>\n",
-       "      <td>-34.766162</td>\n",
-       "      <td>141.1875</td>\n",
-       "      <td>142.3125</td>\n",
-       "      <td>2.728501e-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1889-01-03 12:00:00</td>\n",
-       "      <td>-35.887649</td>\n",
-       "      <td>-34.766162</td>\n",
-       "      <td>141.1875</td>\n",
-       "      <td>142.3125</td>\n",
-       "      <td>5.221255e-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1889-01-04 12:00:00</td>\n",
-       "      <td>-35.887649</td>\n",
-       "      <td>-34.766162</td>\n",
-       "      <td>141.1875</td>\n",
-       "      <td>142.3125</td>\n",
-       "      <td>2.869350e-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1889-01-05 12:00:00</td>\n",
-       "      <td>-35.887649</td>\n",
-       "      <td>-34.766162</td>\n",
-       "      <td>141.1875</td>\n",
-       "      <td>142.3125</td>\n",
-       "      <td>2.290091e-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3035335</th>\n",
-       "      <td>2014-12-27 12:00:00</td>\n",
-       "      <td>-30.280211</td>\n",
-       "      <td>-29.158723</td>\n",
-       "      <td>152.4375</td>\n",
-       "      <td>153.5625</td>\n",
-       "      <td>1.218327e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3035336</th>\n",
-       "      <td>2014-12-28 12:00:00</td>\n",
-       "      <td>-30.280211</td>\n",
-       "      <td>-29.158723</td>\n",
-       "      <td>152.4375</td>\n",
-       "      <td>153.5625</td>\n",
-       "      <td>6.209972e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3035337</th>\n",
-       "      <td>2014-12-29 12:00:00</td>\n",
-       "      <td>-30.280211</td>\n",
-       "      <td>-29.158723</td>\n",
-       "      <td>152.4375</td>\n",
-       "      <td>153.5625</td>\n",
-       "      <td>3.562820e-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3035338</th>\n",
-       "      <td>2014-12-30 12:00:00</td>\n",
-       "      <td>-30.280211</td>\n",
-       "      <td>-29.158723</td>\n",
-       "      <td>152.4375</td>\n",
-       "      <td>153.5625</td>\n",
-       "      <td>4.175968e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3035339</th>\n",
-       "      <td>2014-12-31 12:00:00</td>\n",
-       "      <td>-30.280211</td>\n",
-       "      <td>-29.158723</td>\n",
-       "      <td>152.4375</td>\n",
-       "      <td>153.5625</td>\n",
-       "      <td>1.295304e-03</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3035340 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        time    lat_min    lat_max   lon_min   lon_max  \\\n",
-       "0        1889-01-01 12:00:00 -35.887649 -34.766162  141.1875  142.3125   \n",
-       "1        1889-01-02 12:00:00 -35.887649 -34.766162  141.1875  142.3125   \n",
-       "2        1889-01-03 12:00:00 -35.887649 -34.766162  141.1875  142.3125   \n",
-       "3        1889-01-04 12:00:00 -35.887649 -34.766162  141.1875  142.3125   \n",
-       "4        1889-01-05 12:00:00 -35.887649 -34.766162  141.1875  142.3125   \n",
-       "...                      ...        ...        ...       ...       ...   \n",
-       "3035335  2014-12-27 12:00:00 -30.280211 -29.158723  152.4375  153.5625   \n",
-       "3035336  2014-12-28 12:00:00 -30.280211 -29.158723  152.4375  153.5625   \n",
-       "3035337  2014-12-29 12:00:00 -30.280211 -29.158723  152.4375  153.5625   \n",
-       "3035338  2014-12-30 12:00:00 -30.280211 -29.158723  152.4375  153.5625   \n",
-       "3035339  2014-12-31 12:00:00 -30.280211 -29.158723  152.4375  153.5625   \n",
-       "\n",
-       "         rain (mm/day)  \n",
-       "0         4.265520e-17  \n",
-       "1         2.728501e-20  \n",
-       "2         5.221255e-24  \n",
-       "3         2.869350e-17  \n",
-       "4         2.290091e-15  \n",
-       "...                ...  \n",
-       "3035335   1.218327e+01  \n",
-       "3035336   6.209972e-01  \n",
-       "3035337   3.562820e-04  \n",
-       "3035338   4.175968e+01  \n",
-       "3035339   1.295304e-03  \n",
-       "\n",
-       "[3035340 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ignored-sharing",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:525]",
-   "language": "python",
-   "name": "conda-env-525-py"
+   "name": "python3",
+   "display_name": "Python 3.9.2 64-bit ('525_group10': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "4d65a241df4076a6385b7fab0680e2b0db07f88ff7870c00ab83fc1d89e214d3"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -290,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.2-final"
   }
  },
  "nbformat": 4,
