Add creation of processed folder

--- a/notebooks/01-data_and_eda.ipynb
+++ b/notebooks/01-data_and_eda.ipynb
@@ -84,7 +84,10 @@
     "\n",
     "# Constants\n",
     "raw_data_directory_path = os.path.join(\"..\", \"data\", \"raw\")\n",
-    "processed_data_directory_path = os.path.join(\"..\", \"data\", \"processed\")"
+    "processed_data_directory_path = os.path.join(\"..\", \"data\", \"processed\")\n",
+    "\n",
+    "# Setup folders if not existing\n",
+    "os.makedirs(processed_data_directory_path, exist_ok=True)"
    ]
   },
   {
