Add R transfer and EDA

--- a/notebooks/01-data_and_eda.ipynb
+++ b/notebooks/01-data_and_eda.ipynb
@@ -842,7 +842,7 @@
    "source": [
     "### Final choice\n",
     "\n",
-    "> We decided to use feather as the preffered method of making the transfer between Python and R. We made this decision based on our reading of [the material](https://ursalabs.org/blog/2020-feather-v2/) provided in the course notes as well as our empirical results using the `%%time` cell magic. Both parquet and feather are binary file formats, however, feather is faster to read on solid state drives due to its simpler compression scheme."
+    "> We decided to use feather as the preferred method of making the transfer between Python and R. We made this decision based on our reading of [the material](https://ursalabs.org/blog/2020-feather-v2/) provided in the course notes as well as our empirical results using the `%%time` cell magic. Both parquet and feather are binary file formats, however, feather outperforms parquet on solid state drives due to its simpler compression scheme. Empirically, it was about 65% faster to read the feather file compared to the parquet file. Given the aims and priorities of this milestone, we decided to choose feather as the means for file transfer."
    ]
   },
   {
@@ -861,13 +861,6 @@
     "    - Reading a single large file is much quicker with Feather or parquet file types - even parallelizing reading a CSV with Dask is slower than these more optimized file types.\n",
     "    - If we knew in advance what calculations we wanted to carry out, we could have delayed execution and used Dask to build the graph and then run an optimized `compute()` step at the end. This can be seen above when combining all files and calculating counts of readings per model using lazy evaluation. If our calculation can be done by chunk - we could also read the CSV using Pandas in chunks and calculate our summary statistic. "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
