--- a/notebooks/02-ml_preprocessing.ipynb
+++ b/notebooks/02-ml_preprocessing.ipynb
@@ -295,7 +295,7 @@
     "# INPUTS ------------------------------------------\n",
     "# Due to difficulties with permissions on S3 buckets, we've been using a few iterations here\n",
     "path_to_input_datasets = \"/srv/data/my_shared_data_folder/\"\n",
-    "# path_to_datasets = \"s3://mds-s3-student71/\"\n",
+    "# path_to_input_datasets = \"s3://mds-s3-student71/\"\n",
     "\n",
     "path_to_output = \"/srv/data/my_shared_data_folder/\"\n",
     "# path_to_output = \"s3://mds-s3-student71/output/\"\n",
