Update for S3 permissions to Kaichengs account

--- a/notebooks/02-ml_preprocessing.ipynb
+++ b/notebooks/02-ml_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8831451d",
+   "id": "83ba9703",
    "metadata": {},
    "source": [
     "## ML Preprocessing\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b0036268",
+   "id": "d7e7f0b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90d6ca6",
+   "id": "9e0d35b5",
    "metadata": {},
    "source": [
     "### Data prep"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "366ce9b1",
+   "id": "e93e012d",
    "metadata": {},
    "source": [
     "We are going to read in multiple weather model forecasts for Australia from parquet files, trim to Sydney forecasts and then join on actual observed rainfall data. We will aggregate to *mean* daily rainfall from the models to compare to actuals. The final data frame will have a separate column for each weather model to be used for machine learning modelling of the actual rainfall in Sydney."
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3d9819b8",
+   "id": "770b9d1f",
    "metadata": {},
    "outputs": [
     {
@@ -293,12 +293,11 @@
    ],
    "source": [
     "# INPUTS ------------------------------------------\n",
-    "# Due to difficulties with permissions on S3 buckets, we've been using a few iterations here\n",
-    "path_to_input_datasets = \"/srv/data/my_shared_data_folder/\"\n",
-    "# path_to_input_datasets = \"s3://mds-s3-student71/\"\n",
+    "# path_to_input_datasets = \"/srv/data/my_shared_data_folder/\"\n",
+    "path_to_input_datasets = \"s3://mds-s3-student71/\"\n",
     "\n",
-    "path_to_output = \"/srv/data/my_shared_data_folder/\"\n",
-    "# path_to_output = \"s3://mds-s3-student71/output/\"\n",
+    "# path_to_output = \"/srv/data/my_shared_data_folder/\"\n",
+    "path_to_output = \"s3://mds-s3-student71/output/\"\n",
     "\n",
     "# CONSTANTS ----------------------------------------\n",
     "syd_lat = -33.86\n",
@@ -326,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eac9cdf",
+   "id": "aaa5366a",
    "metadata": {},
    "source": [
     "We write to `S3` for object persistence and downstream modelling."
@@ -335,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "ce5fa283",
+   "id": "29f3c165",
    "metadata": {},
    "outputs": [],
    "source": [
