--- a/notebooks/02-ml_preprocessing.ipynb
+++ b/notebooks/02-ml_preprocessing.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83ba9703",
    "metadata": {},
    "source": [
     "## ML Preprocessing\n",
@@ -12,7 +11,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d7e7f0b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +26,47 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e0d35b5",
+   "metadata": {},
+   "source": [
+    "## Screenshots:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Part 1](../images/1_result.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Part 2](../images/2_result.png)\r\n",
+    "\r\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Part 3](../images/3_result.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Part 4](../images/4_result.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Data prep"
@@ -36,7 +74,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93e012d",
    "metadata": {},
    "source": [
     "We are going to read in multiple weather model forecasts for Australia from parquet files, trim to Sydney forecasts and then join on actual observed rainfall data. We will aggregate to *mean* daily rainfall from the models to compare to actuals. The final data frame will have a separate column for each weather model to be used for machine learning modelling of the actual rainfall in Sydney."
@@ -45,7 +82,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "770b9d1f",
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +361,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa5366a",
    "metadata": {},
    "source": [
     "We write to `S3` for object persistence and downstream modelling."
@@ -334,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "29f3c165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,21 +378,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "name": "python376jvsc74a57bd06742c73052c9c838827753ee098a680bd14b923837a51863cdfbcce460f99e80"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": ""
   }
  },
  "nbformat": 4,
