--- a/notebooks/04-api-reflection.ipynb
+++ b/notebooks/04-api-reflection.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4db4d4f1",
    "metadata": {},
    "source": [
     "# DSCI 525 - Web and Cloud Computing"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e39479c6",
    "metadata": {},
    "source": [
     "***Milestone 4:*** In this milestone, you will deploy the machine learning model you trained in milestone 3."
@@ -18,7 +16,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f21e41e",
    "metadata": {},
    "source": [
     "Milestone 4 checklist :\n",
@@ -33,7 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0920dfbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e253ffab",
    "metadata": {},
    "source": [
     "## 1. Develop your API\n",
@@ -57,7 +52,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "964f21ae",
    "metadata": {},
    "source": [
     "You probably got how to set up primary URL endpoints from the ```sampleproject.ipynb notebook``` and have them process and return some data. Here we are going to create a new endpoint that accepts a POST request of the features required to run the machine learning model that you trained and saved in last milestone (i.e., a user will post the predictions of the 25 climate model rainfall predictions, i.e., features,  needed to predict with your machine learning model). Your code should then process this data, use your model to make a prediction, and return that prediction to the user. To get you started with all this, I've given you a template which you should fill out to set up this functionality:\n",
@@ -102,7 +96,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1efabfd8",
    "metadata": {},
    "source": [
     "### app.py for task 1\n",
@@ -149,7 +142,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e45042c0",
    "metadata": {},
    "source": [
     "## 2. Deploy your API\n",
@@ -159,7 +151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b24fdfa5",
    "metadata": {},
    "source": [
     "Once your API (app.py) is working we're ready to deploy it! For this, do the following:\n",
@@ -203,7 +194,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c1f7d2a6",
    "metadata": {},
    "source": [
     "### Screenshot of the curl command output\n",
@@ -213,35 +203,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e191fa",
    "metadata": {},
    "source": [
     "## 3. Summarize your journey from Milestone 1 to Milestone 4\n",
     "rubric={mechanics:10}\n",
-    ">There is no format or structure on how you write this. (also, no minimum number of words).  It's your choice on how well you describe it."
+    "\n",
+    "\n",
+    "### Milestone 1\n",
+    "\n",
+    "> In milestone 1, we started working with datasets larger than those we had previously encountered in MDS. This was a frustrating process that took a long time especially for group members using computers with low-end specifications. Working with large .csv files and pandas was slow so we used tools like Dask to make this process more manageable on our local computers. \n",
+    "We also explored efficient ways to transfer files between Python and R (e.g. Parquet, Feather, etc). This milestone helped us to gain an appreciation for the role of web and cloud computing by realizing the limitations of working with large datasets on our local computer. \n",
+    "\n",
+    "\n",
+    "### Milestone 2\n",
+    "\n",
+    "> In milestone 2, we moved from our local computers to AWS. We set up a shared working environment by instantiating a single EC2 instance housing the littlest Jupyter Hub (TLJH) as well as an S3 Bucket to house our data. This remedied the slow run times that some of our group members were facing due to limited computational resources on their local computers. This approach simply allocated more computation resources to our data processing and did not parallelize the data processing.    \n",
+    "\n",
+    "\n",
+    "### Milestone 3\n",
+    "\n",
+    "> In milestone 3, we set up an EMR cluster and established an SSH tunnel to its master node. We were able to connect to a shared Jupyter Hub instance via the FoxyProxy extension on Firefox. Milestone 3 was a step forward from milestone 2 as we moved from a serialized to a parallelized approach in our data processing by using Spark. This change allowed our data pipeline to scale gracefully. Using Spark, we successfully conducted hyperparameter optimization for our machine learning model in a parallelized manner. We completed the milestone by creating our final model and serializing to the S3 bucket.    \n",
+    "\n",
+    "\n",
+    "### Milestone 4\n",
+    "\n",
+    "> In milestone 4, we deployed our final model via a Flask app. We used `screen` as a tool to allow our Flask app to remain accessible even when we had terminated our SSH session.  Our model is now accessible to those who wish to use it. Users can interact with our model simply by sending an HTTPS request to our server.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e5b28ef",
    "metadata": {},
    "source": [
     "## 4. Submission instructions\n",
     "rubric={mechanics:5}\n",
     "\n",
     "In the textbox provided on Canvas please put a link where TAs can find the following-\n",
-    "- [ ] This notebook with solution to ```1 & 3```\n",
-    "- [ ] Screenshot from \n",
-    "    - [ ] Output after trying curl. Here is a [sample](https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/Milestones/milestone4/images/curl_deploy_sample.png). This is just an example; your input/output doesn't have to look like this, you can design the way you like. But at a minimum, it should show your prediction value."
+    "- [x] This notebook with solution to ```1 & 3```\n",
+    "- [x] Screenshot from \n",
+    "    - [x] Output after trying curl. Here is a [sample](https://github.ubc.ca/MDS-2020-21/DSCI_525_web-cloud-comp_students/blob/master/Milestones/milestone4/images/curl_deploy_sample.png). This is just an example; your input/output doesn't have to look like this, you can design the way you like. But at a minimum, it should show your prediction value."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62fd58ca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -260,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
